--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -1,12 +1,31 @@
-
-.Encabezado {
-    text-align: center;
+body {
     color: black;
-    font-family: "Arial";
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
-.Contenido {
-    text-align: left;
-    color: blue;
-    font-family: 'Courier New', Courier, monospace;
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: center;
+    border: 2px solid black;
+    margin:  0 auto;
+}
+
+
+#container h2 {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-size: 22px;
+}
+
+#container p {
+    text-align: right;
+    font-family: cursive;
+    color: tomato;
+    font-size: 20px;
 }
