--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -17,15 +17,31 @@ body {
 
 
 #container h2 {
-    text-align: center;
+    text-align: left;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     font-size: 22px;
 }
 
 #container p {
-    text-align: right;
+    text-align: left;
+    text-justify: auto;
     font-family: cursive;
     color: tomato;
     font-size: 20px;
+}
+
+#cabecera {
+    background-color: #33A;
+    color: white;
+    font-size: 24px;
+    text-align: left;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5); 
+    font-weight:  bold;
+    margin: 0;
+    padding: 0.5cm;
+
+    
+
+
 }
