--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -1,8 +1,8 @@
 body {
     color: black;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
     margin: 0;
     padding: 0;
 }
