--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -17,10 +17,10 @@ body {
 
 
 #container h2 {
-    text-align: left;
+    text-align: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
-    font-size: 22px;
+    font-size: 25px;
 }
 
 #container p {
