--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -1,7 +1,7 @@
 body {
-    color: black;
+    color: blue;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Arial";
     font-size: 18px;
     margin: 0;
     padding: 0;
