--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -1,48 +1,51 @@
-body {
-    color: black;
+body
+{
+    color: #333;
     text-align: center;
-    font-family: "Arial";
-    font-size: 18px;
+    font-family: Arial;
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
-#container {
-    width: 70%;
-    padding: 1em;
-    text-align: center;
-    border: 2px solid black;
-    margin:  0 auto;
-}
-
-
-#container h2 {
-    text-align: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: black;
-    font-size: 25px;
-}
-
-#container p {
-    text-align: left;
-    text-justify: auto;
-    font-size: 20px;
-}
-
-#cabecera {
-    background-color: #33A;
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
-    font-size: 24px;
-    text-align: left;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5); 
-    font-weight:  bold;
+    font-weight: bold;
     margin: 0;
-    padding: 0.5cm;
+    padding: 0.5em;
 }
 
-#cabecera #tagline {
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
+#cabecera #tagline
+{
     padding: 0 0 0 1em;
     font-weight: normal;
-    font-size: 0 8em;
-
+    font-size: 0.8em;
 }
+
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
+}
+#post
+{
+    padding: 1em;
+}
+
